--- a/RestaurantBookingSystem.App/Pages/RestaurantUsers/MyRestaurant/DeleteMenu.cshtml
+++ b/RestaurantBookingSystem.App/Pages/RestaurantUsers/MyRestaurant/DeleteMenu.cshtml
@@ -1,12 +1,11 @@
 ﻿@page "{id:int}"
 @model RestaurantBookingSystem.App.Pages.Administration.Restaurants.DeleteMenuModel
 @{
-    ViewData["Title"] = "Delete Menu";
-    Layout = "_AdminLayout";
+    Layout = "_RestaurantUserLayout";
 }
 
-@section AdminSideBar {
-    <partial name="Administration/_AdminSidebar" />
+@section EmployeeSideBar {
+    <partial name="RestaurantUsers/_EmployeeSideBar" />
 }
 
 <h2>Are you sure you want to delete this menu?</h2>
@@ -21,7 +20,7 @@
         <dd class="col-sm-10">@Model.Restaurant.Menu.Description</dd>
     </dl>
     <div class="form-group mt-3">
-        <button type="submit" class="btn btn-danger">Delete</button>
-        <a asp-page="/Administration/Index" asp-route-view="_Restaurants" class="btn btn-secondary">Cancel</a>
+    <button type="submit" class="btn btn-danger">Delete</button>
+    <a asp-page="/Administration/Index" asp-route-view="_Restaurants" class="btn btn-secondary">Cancel</a>
     </div>
 </form>
