--- a/RestaurantBookingSystem.App/Pages/RestaurantUsers/Reservations/AddReservation.cshtml
+++ b/RestaurantBookingSystem.App/Pages/RestaurantUsers/Reservations/AddReservation.cshtml
@@ -1,6 +1,66 @@
-﻿@page
+﻿@page "{id:int}";
 @model RestaurantBookingSystem.App.Pages.RestaurantUsers.Reservations.AddReservationModel
 @{
     ViewData["Title"] = "Add Reservation";
     Layout = "_RestaurantUserLayout";
 }
+
+@section EmployeeSideBar {
+    <partial name="RestaurantUsers/_EmployeeSideBar" />
+}
+
+<form method="post" asp-page-handler="CreateReservation">
+    <input type="hidden" asp-for="@Model.AddReservationData.RestaurantId" />
+    <div class="row">
+        <h3>Customers Details</h3>
+        <div class="form-group mt-3">
+            <label asp-for="@Model.AddReservationData.CustomerFirstName" class="form-label">Customer first name</label>
+            <input asp-for="@Model.AddReservationData.CustomerFirstName" class="form-control" />
+        </div>
+        <div class="form-group mt-3">
+            <label asp-for="@Model.AddReservationData.CustomerLastName" class="form-label">Customer last name</label>
+            <input asp-for="@Model.AddReservationData.CustomerLastName" class="form-control" />
+        </div>
+        <div class="form-group mt-3">
+            <label asp-for="@Model.AddReservationData.CustomerPhoneNumber" class="form-label">Phone number</label>
+            <input asp-for="@Model.AddReservationData.CustomerPhoneNumber" class="form-control" />
+        </div>
+    </div>
+
+    <div class="row">
+        <h3>Reservation Details</h3>
+        <div class="form-group mt-3">
+            <label asp-for="@Model.AddReservationData.ReservationDate" class="form-label">Reservation Date</label>
+            <input asp-for="@Model.AddReservationData.ReservationDate" class="form-control" type="date" min="@DateTime.Today.ToString("yyyy-MM-dd")" />
+        </div>
+        <div class="form-group mt-3">
+            <label asp-for="@Model.AddReservationData.ReservationTime" class="form-label">Reservation time</label>
+            <input asp-for="@Model.AddReservationData.ReservationTime" type="time" class="form-control" min="12:00" max="23:59" />
+        </div>
+        <div class="form-group mt-3">
+            <label asp-for="@Model.AddReservationData.NumberOfPeople" class="form-label">Number of people</label>
+            <input asp-for="@Model.AddReservationData.NumberOfPeople" class="form-control" />
+        </div>
+        <div class="form-group mt-3">
+            <label asp-for="@Model.AddReservationData.SelectedTableId" class="form-label">Table</label>
+            <select asp-for="@Model.AddReservationData.SelectedTableId" class="form-control" asp-items="Model.AddReservationData.AvailableTables">
+                <option value="">-- Select Table --</option>
+            </select>
+        </div>
+        <div class="form-group mt-3">
+            <label asp-for="@Model.AddReservationData.SelectedReservationStatusId" class="form-label">Reservation Status</label>
+            <select asp-for="@Model.AddReservationData.SelectedReservationStatusId" class="form-control" asp-items="Model.AddReservationData.ReservationStatuses">
+                <option value="">-- Select  Status --</option>
+            </select>
+        </div>
+        <div class="form-group mt-3">
+            <label asp-for="@Model.AddReservationData.SelectedOrderStatusId" class="form-label">Order Status</label>
+            <select asp-for="@Model.AddReservationData.SelectedOrderStatusId" class="form-control" asp-items="Model.AddReservationData.OrderStatuses">
+                <option value="">-- Select  Status --</option>
+            </select>
+        </div>
+        <button type="submit" class="btn btn-primary">Create Reservation</button>
+    </div>
+
+    </div>
+</form>
