--- a/RestaurantBookingSystem.App/Pages/Administration/_AdminLayout.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/_AdminLayout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - RestaurantBookingSystem.App</title>
+    <title>@ViewData["Title"] - DineReserve</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/RestaurantBookingSystem.App.styles.css" asp-append-version="true" />
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">RestaurantBookingSystem.App</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">DineReserve</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -77,7 +77,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - RestaurantBookingSystem.App - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2025 - DineReserve - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
